add auto arena to SwiftKit core that should work on Android